# libseed

./: CMakeLists.txt  LICENSE  README
docs/: UnrealEngine.md
include/conjuring/: creator.hpp  cropper.hpp  image_render.hpp  point_distribution.hpp  polygon.hpp  rectangle.hpp  world_parameters.hpp
projects/vs/: Conjuring.sln  Conjuring.vcxproj  Conjuring.vcxproj.filters
src/: creator.cpp  cropper.cpp  image_render.cpp  point_distribution.cpp  polygon.cpp  rectangle.cpp  world_parameters.cpp
